--- a/MERN/javascript/fundamentals/convert_to_arrow.html
+++ b/MERN/javascript/fundamentals/convert_to_arrow.html
@@ -31,7 +31,7 @@
         document.getElementById("hover-this").onmouseout = () => setBackgroundColorById("body", "white");
         const getValueFromId = id => document.getElementById(id).value;
         const setBackgroundColorById = (id, color) => document.getElementById(id).style = "background-color: " + color;
-        const mouseOverFunction = el => el.style = 'background-color: ${getValueFromId("input")}';
+        // const mouseOverFunction = el => el.style = 'background-color: ${getValueFromId("input")}';
         
     </script>
 </body>
